--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name = "description" content = "Webpage">
     <meta name = "keywords" content ="html, css, web, web development, javascript">
     <link rel = "icon" href ="./assets/img/favicon.png?v=2" type = "/x-icon">
-    <title>World of WordCraft</title>
+    <title>Key Rush</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
