--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name ="author" content = "Gabe">
     <meta name = "description" content = "Webpage">
     <meta name = "keywords" content ="html, css, web, web development, javascript">
-    <link rel = "icon" href ="./assets/img/favicon.png?v=2" type = "/x-icon">
+    <link rel = "icon" href ="./assets/img/favicon.jpeg?v=2" type = "/x-icon">
     <title>Key Rush</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
