minor cleanup and better comments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name ="author" content = "Gabe">
+    <meta name ="author" content = "Gabe Jashanpreet">
     <meta name = "description" content = "Webpage">
     <meta name = "keywords" content ="html, css, web, web development, javascript">
     <link rel = "icon" href ="./assets/img/favicon.jpeg?v=2" type = "/x-icon">
