--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style/reset.css">
     <link rel="stylesheet" href="./assets/style/style.css">
-    <script src="./assets/script/app.js" defer></script>
+    <script type="module" src="./assets/script/app.js" defer></script>
   </head>
   <body>
       <div class="container">
         <h1>Key Rush</h1>
         <button class="start-button" id="start-button">Start</button>
         <div class="game-contents">
-            <div class="hits" id="hits">Hits: 0</div>
+            <div class="hits" id="hits">Typos: 0</div>
             <div class="timer" id="timer">00</div>
             <section id="random-word">word</section>
             <input type="text" class="input" id="input" placeholder="type here">
