--- a/index.html
+++ b/index.html
@@ -17,15 +17,31 @@
     <script type="module" src="./assets/script/app.js" defer></script>
   </head>
   <body>
-      <div class="container">
-        <h1>Key Rush</h1>
-        <button class="start-button" id="start-button">Start</button>
-        <div class="game-contents">
-            <div class="hits" id="hits">Typos: 0</div>
-            <div class="timer" id="timer">00</div>
-            <section id="random-word">word</section>
-            <input type="text" class="input" id="input" placeholder="type here">
+    <div class="overlay">
+      <div class="score-board modal">
+        <h2>Scoreboard</h2>
+        <div class="score-box">
+          <h2>Place</h2>
+          <h2>Score</h2>
+          <h2>Date</h2>
         </div>
       </div>
+      <div class="input-modal modal">
+        <h2>Input name</h2>
+        <input type="text" id='input-name' value="anonymous">
+        <button type="button" id="input-button">Submit</button> 
+      </div>
+    </div>
+  
+    <div class="container">
+      <h1>Key Rush</h1>
+      <button class="start-button" id="start-button">Start</button>
+      <div class="game-contents">
+          <div class="hits" id="hits">Typos: 0</div>
+          <div class="timer" id="timer">00</div>
+          <section id="random-word">word</section>
+          <input type="text" class="input" id="input" placeholder="type here">
+      </div>
+    </div>
   </body>
 </html>
