scoreboard basic styling

--- a/index.html
+++ b/index.html
@@ -17,20 +17,18 @@
     <script type="module" src="./assets/script/app.js" defer></script>
   </head>
   <body>
-
-    <div class="score-board modal">
+    <main>
+     <div class="score-board modal">
       <h2>Scoreboard</h2>
-      <div id="display-scores">
-        <div class="score-box">
-          <h2>Place</h2>
-          <h2>Score</h2>
-          <h2>Date</h2>
+        <div id="display-scores">
+          <div class="score-box">
+            <h2>Place</h2>
+            <h2>Score</h2>
+            <h2>Date</h2>
+          </div>
         </div>
-      </div>
-    </div>
-
-  
-    <div class="container">
+     </div>
+     <div class="container">
       <h1>Key Rush</h1>
       <button class="start-button" id="start-button">Start</button>
       <div class="game-contents">
@@ -39,6 +37,7 @@
           <section id="random-word">word</section>
           <input type="text" class="input" id="input" placeholder="type here">
       </div>
-    </div>
+     </div>
+    </main>
   </body>
 </html>
