scoreboard styling changes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
      <div class="score-board modal">
       <h2>Scoreboard</h2>
         <div id="display-scores">
+          <div class="titles">
+            <span>place</span>
+            <span>Score</span>
+            <span>Date</span>
+          </div>
           <div class="score-box">
             <h2>Place</h2>
             <h2>Score</h2>
