--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <main>
      <div class="score-board modal">
       <h2>Scoreboard</h2>
+      <div class="titles">
+        <span>Place</span>
+        <span>Score</span>
+        <span>Date</span>
+      </div>
         <div id="display-scores">
-          <div class="titles">
-            <span>place</span>
-            <span>Score</span>
-            <span>Date</span>
-          </div>
           <div class="score-box">
             <h2>Place</h2>
             <h2>Score</h2>
@@ -37,7 +37,7 @@
       <h1>Key Rush</h1>
       <button class="start-button" id="start-button">Start</button>
       <div class="game-contents">
-          <div class="hits" id="hits">Typos: 0</div>
+          <div class="hits" id="hits">Hits: 0</div>
           <div class="timer" id="timer">00</div>
           <section id="random-word">word</section>
           <input type="text" class="input" id="input" placeholder="type here">
